# flowkey

./: .gitignore  COMMIT_SCRIPT.sh  Cargo.toml  EXPECT_REPLACEMENTS.md  EXPECT_REPLACEMENTS_FINAL.md  README.md  build.ps1  build.sh  flowkey
.cargo/: config.toml
.github/workflows/: package.yml
crates/flowkey-cli/: Cargo.toml  build.rs
crates/flowkey-cli/resources/: app.manifest
crates/flowkey-cli/src/: main.rs  setup.rs
crates/flowkey-config/: Cargo.toml
crates/flowkey-config/src/: config.rs  lib.rs
crates/flowkey-core/: Cargo.toml
crates/flowkey-core/src/: daemon.rs  lib.rs  recovery.rs  session.rs  status.rs  switching.rs
crates/flowkey-crypto/: Cargo.toml
crates/flowkey-crypto/src/: handshake.rs
crates/flowkey-daemon/: Cargo.toml
crates/flowkey-daemon/src/: bootstrap.rs  control_ipc.rs  lib.rs  platform.rs  session_flow.rs  status_writer.rs  supervisor.rs
crates/flowkey-gui/: Cargo.toml  tauri.conf.json
crates/flowkey-gui/frontend/: index.html  package-lock.json  package.json
crates/flowkey-gui/frontend/src/: App.css  App.tsx  index.css  types.ts
crates/flowkey-gui/icons/: icon.icns
crates/flowkey-gui/src/: main.rs
crates/flowkey-gui/windows/fragments/: firewall.wxs
crates/flowkey-input/: Cargo.toml
crates/flowkey-input/src/: capture.rs  event.rs  hotkey.rs  loopback.rs  native_injector.rs  normalize.rs
crates/flowkey-input/src/native_injector/: macos.rs  windows.rs
crates/flowkey-net/: Cargo.toml
crates/flowkey-net/src/: connection.rs  discovery.rs  frame.rs  lib.rs  metrics.rs  pairing.rs  probe.rs
crates/flowkey-net/tests/: manual_pairing.rs  reconnect_chaos.rs
crates/flowkey-platform-macos/: Cargo.toml
crates/flowkey-platform-macos/src/: capture.rs  control_ipc.rs  hotkey.rs  inject.rs  lib.rs  permissions.rs
crates/flowkey-platform-windows/: Cargo.toml
crates/flowkey-platform-windows/src/: capture.rs  control_ipc.rs  debug.rs  hotkey.rs  inject.rs  lib.rs  local_release.rs  memory.rs  permissions.rs
crates/flowkey-protocol/: Cargo.toml
crates/flowkey-protocol/src/: input.rs  message.rs
crates/kms-cli/: Cargo.toml
crates/kms-cli/src/: main.rs
crates/kms-config/: Cargo.toml
crates/kms-config/src/: config.rs  lib.rs
crates/kms-core/: Cargo.toml
crates/kms-core/src/: lib.rs  recovery.rs  status.rs  switching.rs
crates/kms-crypto/: Cargo.toml
crates/kms-crypto/src/: handshake.rs  identity.rs  lib.rs
crates/kms-daemon/: Cargo.toml
crates/kms-daemon/src/: bootstrap.rs  lib.rs
crates/kms-input/: Cargo.toml
crates/kms-input/src/: event.rs  inject.rs  keycode.rs  lib.rs  loopback.rs  native_injector.rs
crates/kms-net/: Cargo.toml
crates/kms-net/src/: connection.rs  frame.rs  heartbeat.rs  lib.rs
crates/kms-platform-macos/: Cargo.toml
crates/kms-platform-macos/src/: capture.rs  hotkey.rs  inject.rs
crates/kms-platform-windows/: Cargo.toml
crates/kms-platform-windows/src/: capture.rs  hotkey.rs  inject.rs  lib.rs
crates/kms-protocol/: Cargo.toml
crates/kms-protocol/src/: input.rs  lib.rs
docs/: ai-agent-handoff.md  architecture.md  control-mode-fix-plan.md  cross-platform-test-report.md  gui-pairing-backlog.md  implementation-status.md  keyboard-not-reaching-mac-diagnosis-20260421-030355.md  optimization-backlog.md  protocol.md  review-2026-04-11.md  roadmap.md  setup-guide.md  work-backlog-2026-04-11.md
scripts/: install.ps1  install.sh  package-linux.sh  package-macos.sh  package-windows.ps1  package.ps1  package.sh
