[workspace]
members = [
    "crates/flowkey-cli",
    "crates/flowkey-core",
    "crates/flowkey-config",
    "crates/flowkey-crypto",
    "crates/flowkey-net",
    "crates/flowkey-protocol",
    "crates/flowkey-daemon",
    "crates/flowkey-input",
    "crates/flowkey-platform-macos",
    "crates/flowkey-platform-windows",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Ray Chang"]

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
mdns-sd = "0.19"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
inquire = "0.7"
