[package]
name = "flowkey-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "flky"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
inquire.workspace = true
flowkey-daemon = { path = "../flowkey-daemon" }
flowkey-core = { path = "../flowkey-core" }
flowkey-config = { path = "../flowkey-config" }
flowkey-crypto = { path = "../flowkey-crypto" }
flowkey-net = { path = "../flowkey-net" }

[target.'cfg(target_os = "macos")'.dependencies]
flowkey-platform-macos = { path = "../flowkey-platform-macos" }

[target.'cfg(target_os = "windows")'.dependencies]
flowkey-platform-windows = { path = "../flowkey-platform-windows" }
