[package]
name = "flowkey-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
bincode.workspace = true
toml.workspace = true
tracing.workspace = true
arc-swap = "1"
flowkey-config = { path = "../flowkey-config" }
flowkey-input = { path = "../flowkey-input" }
