[package]
name = "flowkey-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
arc-swap = "1"
tokio-util = { version = "0.7", features = ["rt"] }
flowkey-config = { path = "../flowkey-config" }
flowkey-core = { path = "../flowkey-core" }
flowkey-input = { path = "../flowkey-input" }
flowkey-net = { path = "../flowkey-net" }
uuid = { version = "1.1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
flowkey-platform-macos = { path = "../flowkey-platform-macos" }

[target.'cfg(target_os = "windows")'.dependencies]
flowkey-platform-windows = { path = "../flowkey-platform-windows" }
