[package]
name = "flowkey-gui"
version = "0.1.0"
edition = "2021"
authors = ["Ray Chang"]
license = "MIT"

[package.metadata.tauri]

[dependencies]
tauri = { version = "1", features = ["system-tray", "api-all", "custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1"

flowkey-config = { path = "../flowkey-config" }
flowkey-core = { path = "../flowkey-core" }
flowkey-daemon = { path = "../flowkey-daemon" }
flowkey-net = { path = "../flowkey-net" }
flowkey-protocol = { path = "../flowkey-protocol" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }
