[package]
name = "flowkey-gui"
version = "0.1.0"
edition = "2021"
authors = ["Ray Chang"]
license = "MIT"

[package.metadata.tauri]
[package.metadata.tauri-winres]

[dependencies]
# Narrowed from "api-all": the frontend only uses invoke + the event system
# (both always available) plus window.setSize. Limiting the allowlist shrinks
# the binary and the runtime API surface (security).
tauri = { version = "1", features = ["system-tray", "window-set-size", "custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Only the runtime/net/time/sync/macros features are used (TcpListener, sleep,
# spawn); trimmed from "full".
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"

flowkey-config = { path = "../flowkey-config" }
flowkey-core = { path = "../flowkey-core" }
flowkey-daemon = { path = "../flowkey-daemon" }
flowkey-net = { path = "../flowkey-net" }
flowkey-protocol = { path = "../flowkey-protocol" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[target.'cfg(target_os = "macos")'.dependencies]
flowkey-platform-macos = { path = "../flowkey-platform-macos" }

[target.'cfg(target_os = "windows")'.dependencies]
flowkey-platform-windows = { path = "../flowkey-platform-windows" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }
