[package]
name = "flowkey-input"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flowkey-protocol = { path = "../flowkey-protocol" }
tracing.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
enigo = "0.6.1"
rdev = "0.5.3"
