[package]
name = "flowkey-platform-macos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flowkey-input = { path = "../flowkey-input" }
tracing.workspace = true
core-graphics = "0.25.0"
core-foundation = "0.9.3"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
