[package]
name = "flowkey-platform-windows"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flowkey-input = { path = "../flowkey-input" }
rdev = "0.5.3"
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
windows-sys = { version = "0.61.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
] }
