[package]
name = "kms-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kms"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
kms-daemon = { path = "../kms-daemon" }
kms-core = { path = "../kms-core" }
kms-config = { path = "../kms-config" }
kms-crypto = { path = "../kms-crypto" }
