[package]
name = "kms-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
kms-config = { path = "../kms-config" }
kms-core = { path = "../kms-core" }
kms-input = { path = "../kms-input" }
kms-platform-macos = { path = "../kms-platform-macos" }
kms-platform-windows = { path = "../kms-platform-windows" }
kms-net = { path = "../kms-net" }
