[package]
name = "kms-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
kms-config = { path = "../kms-config" }
kms-crypto = { path = "../kms-crypto" }
kms-input = { path = "../kms-input" }
kms-protocol = { path = "../kms-protocol" }

[dev-dependencies]
base64.workspace = true
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand.workspace = true
